--- a/src/main/resources/templates/userEdit.mustache
+++ b/src/main/resources/templates/userEdit.mustache
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Spring Security Example </title>
+    <title>User Editor</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,44 +32,24 @@
 
             </li>
         </ul>
+        <form action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <input type="submit" value="Logout">
+        </form>
+        <div class="navbar-text">{{user.username}} {{user.roles}}</div>
     </div>
 </nav>
 <div class="container mt-5">
-    <h2>Add new user</h2>
-    {{#message}}
-        {{model.message}}
-    {{/message}}
-    <form action="/registration" method="post">
-                <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Username : <input type="text" class="form-control" name="username"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Password: <input type="password" class="form-control" name="password"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Email: <input type="text" class="form-control" name="email"/>
-            </label>
-        </div >
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                First name: <input type="text" class="form-control" name="firstName"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Last name: <input type="text" class="form-control" name="lastName"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
-            <button class="btn btn-dark" type="submit">Register</button>
-        </div>
-        <div><a href="/login" class="btn btn-dark">Sign in</a></div>
+    <form action="/user" method="post">
+        <input type="text" name="username" value="{{user.username}}">
+        {{#roles}}
+            <div>
+                <label><input type="checkbox" name="{{.}}" {{#user.roles}}{{#isRoleSelected}}checked{{/isRoleSelected}}{{/user.roles}}>{{.}}</label>
+            </div>
+        {{/roles}}
+        <input type="hidden" value="{{user.id}}" name="userId">
+        <input type="hidden" value="{{_csrf.token}}" name="_csrf">
+        <button type="submit">Save</button>
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -77,3 +57,25 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>User Editor</title>-->
+<!--</head>-->
+<!--<form action="/user" method="post">-->
+<!--    <input type="text" name="username" value="${user.username}">-->
+<!--    <#list roles as role>-->
+<!--    <div>-->
+<!--        <label><input type="checkbox" name="${role}" ${user.roles?seq_contains(role?string("checked", "")}>${role}</label>-->
+<!--    </div>-->
+<!--    </#list>-->
+<!--    <input type="hidden" value="${user.id}" name="userId">-->
+<!--    <input type="hidden" value="${_csrf.token}" name="_scrf">-->
+<!--    <button type="submit">Save</button>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
