--- a/src/main/resources/templates/userList.mustache
+++ b/src/main/resources/templates/userList.mustache
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Spring Security Example </title>
+    <title>Title</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,45 +32,33 @@
 
             </li>
         </ul>
+        <form action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <input type="submit" value="Logout">
+        </form>
+        <div class="navbar-text">{{user.username}} {{user.roles}}</div>
     </div>
 </nav>
 <div class="container mt-5">
-    <h2>Add new user</h2>
-    {{#message}}
-        {{model.message}}
-    {{/message}}
-    <form action="/registration" method="post">
-                <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Username : <input type="text" class="form-control" name="username"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Password: <input type="password" class="form-control" name="password"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Email: <input type="text" class="form-control" name="email"/>
-            </label>
-        </div >
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                First name: <input type="text" class="form-control" name="firstName"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Last name: <input type="text" class="form-control" name="lastName"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
-            <button class="btn btn-dark" type="submit">Register</button>
-        </div>
-        <div><a href="/login" class="btn btn-dark">Sign in</a></div>
-    </form>
+    List of users
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Role</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        {{#users}}
+            <tr>
+                <td>{{username}}</td>
+                <td>{{#roles}}{{.}}{{#comma}}, {{/comma}}{{/roles}}</td>
+                <td><a href="/user/{{id}}">edit</a></td>
+            </tr>
+        {{/users}}
+        </tbody>
+    </table>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
