--- a/src/main/resources/templates/userProfile.mustache
+++ b/src/main/resources/templates/userProfile.mustache
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -32,44 +32,49 @@
 
             </li>
         </ul>
+        <form class="btn btn-dark" action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <input class="btn btn-dark" type="submit" value="Logout">
+        </form>
+        <div class="navbar-text">{{user.username}} {{user.roles}}</div>
     </div>
 </nav>
 <div class="container mt-5">
-    <h2>Add new user</h2>
-    {{#message}}
-        {{model.message}}
-    {{/message}}
-    <form action="/registration" method="post">
-                <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Username : <input type="text" class="form-control" name="username"/>
-            </label>
-        </div>
+    <h1>{{user.username}}</h1>
+    <form method="post">
+        <img src="../uploads/Girl.jpeg">
         <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Password: <input type="password" class="form-control" name="password"/>
-            </label>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-4 col-form-label">
-                Email: <input type="text" class="form-control" name="email"/>
+            <label class="col-sm-2 col-form-label">
+                <h4>Email: </h4> <h2>{{user.email}}</h2>
             </label>
         </div >
         <div class="form-group row">
+            <label class="col-sm-2 col-form-label">
+                <h4>First name: </h4> <h2>{{user.firstName}}</h2>
+            </label>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">
+                <h4>Last name: </h4> <h2>{{user.lastName}}</h2>
+            </label>
+        </div>
+        <form>
+        <div class="form-group row">
             <label class="col-sm-4 col-form-label">
-                First name: <input type="text" class="form-control" name="firstName"/>
+                Enter new password: <input type="password" class="form-control" name="password" value=""/>
             </label>
         </div>
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">
-                Last name: <input type="text" class="form-control" name="lastName"/>
+                Enter new email: <input type="text" class="form-control" name="email" value=""/>
             </label>
-        </div>
-        <div class="form-group row">
+        </div >
             <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
-            <button class="btn btn-dark" type="submit">Register</button>
-        </div>
-        <div><a href="/login" class="btn btn-dark">Sign in</a></div>
+
+            <label class="btn btn-dark">
+                <input type="submit" class="btn btn-dark" name="save-user" value="Save changes">
+            </label>
+        </form>
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
