Set ADMIN role to new users

--- a/src/main/resources/templates/userList.mustache
+++ b/src/main/resources/templates/userList.mustache
@@ -40,7 +40,7 @@
     </div>
 </nav>
 <div class="container mt-5">
-    List of users
+    <h2>List of users:</h2>
     <table>
         <thead>
         <tr>
